<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mom At College</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_a_homework">Add A Homework</string>
    <string name="add_a_class">Add A Class</string>
    <string name="view_schedule">View Calendar</string>
    <string name="teacher">Teacher:</string>
    <string name="location">Location:</string>
    <string name="office_hours">Office Hours:</string>
    <string name="display_teacher_notes">Teacher Notes:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="frequency">When:</string>
    <string name="timeOfDay">Time:</string>
    <string name="action_search">Search</string>
    <string name="action_schedule">Schedule</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Titles -->
    <string name="title_activity_add_class">Add A Class</string>
    <string name="title_activity_add_homework">Add A Homework</string>
    <string name="title_activity_add_test">Add A Test</string>
    <string name="add_class_title">Add A Class</string>
    <string name="add_homework_title">Add A Homework</string>
    <string name="add_test_title">Add A Test</string>
    <string name="title_activity_add_task">Add A Task</string>
    <string name="add_task_title">Add A Task</string>
    <string name="time_date_dialog_title">Date / Time</string>
    <string name="weekday_dialog_title">Select The Days</string>

    <!-- ********************************************************************** Add a Class ************************************************************ -->
    <string name="class_name_hint">Class Name</string>
    <string name="location_hint">Location (Classroom, Building, etc)</string>
    <string name="teacher_name_hint">Teacher Name</string>
    <string name="teacher_notes_hint">Teacher Notes (Email, Office Hours, etc)</string>
    <string name="date_picker_label">Frequency</string>
    <string name="days_text">Days</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thr">Thr</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">End Time</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="alarm_label">Automatic Alarms</string>
    <string name="class_type_text">Type of Class</string>

    <string-array name="testing">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="class_types">
        <item>Choose a Class Type...</item>
        <item>Lecture</item>
        <item>Recitation</item>
        <item>Lab</item>
    </string-array>

    <!-- ******************************************************************** Add a Homework ********************************************************** -->

    <string name="homework_name_hint">Homework Name</string>
    <string name="homework_notes_hint">Notes (optional)</string>
    <string name="homework_due_date_label">Due Date / Time</string>

    <!-- ******************************************************************** Add a Task ********************************************************** -->

    <string name="task_name_hint">Task Name</string>
    <string name="task_notes_hint">Notes (optional)</string>
    <string name="task_due_date_label">Due Date / Time</string>
    <string name="task_type_hint">Choose a type...</string>
    <string-array name="task_type_array">
        <item>Choose a Task Type...</item>
        <item>Homework</item>
        <item>Test/Quiz</item>
        <item>Study Group</item>
    </string-array>

    <!-- ********************************************************************** Other ************************************************************* -->

    <string name="title_activity_add_calendar">Add a Calendar</string>
    <string name="title_activity_main">Mom at College</string>
    <string name="title_activity_view_class">View Class</string>
    <string name="title_activity_alarm_screen">AlarmScreen</string>

</resources>
