<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="15dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="androiddev.jared.momatcollege.AddTask">

    <!-- Title -->
    <TextView
        android:id="@+id/TaskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskTypeInput"
        android:prompt="@string/class_type_text"
        android:text="@string/class_type_text"
        android:hint="@string/class_type_text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:spinnerMode="dialog"
        android:entries="@array/task_type_array"
        style="?android:spinnerItemStyle"
        android:ellipsize="marquee"
        android:textSize="30sp"/>

    <!-- Homework Name Input -->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskNameInput"
        android:hint="@string/task_name_hint"
        android:inputType="textShortMessage"
        android:layout_marginTop="15dp"
        android:singleLine="true" />

    <!-- Homework Notes Input -->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskNotesInput"
        android:hint="@string/task_notes_hint"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        android:minLines="3" />

    <TextView
        android:id="@+id/taskDueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:layout_gravity="top|left"
        android:singleLine="true"
        android:text="@string/task_due_date_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="left"
            android:hint="Due Date"
            android:focusableInTouchMode="false"
            android:id="@+id/taskDueDateEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="right"
            android:hint="Due Time"
            android:focusableInTouchMode="false"
            android:id="@+id/taskDueTimeEditText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_marginTop="15dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="right"
            android:text="Cancel"
            android:id="@+id/taskCancelBtn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="left"
            android:text="Done"
            android:id="@+id/taskDoneBtn" />

    </LinearLayout>

</LinearLayout>
