<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="15dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="androiddev.jared.momatcollege.AddHomework">

    <!-- Title -->
    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_homework_title"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <!-- Homework Name Input -->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeworkNameInput"
        android:hint="@string/homework_name_hint"
        android:inputType="textShortMessage"
        android:layout_marginTop="15dp"
        android:singleLine="true" />

    <!-- Homework Notes Input -->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeworkNotesInput"
        android:hint="@string/homework_notes_hint"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        android:minLines="3" />

    <TextView
        android:id="@+id/homeworkDueDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:layout_gravity="top|left"
        android:singleLine="true"
        android:text="@string/homework_due_date_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_marginTop="5dp">

        <!--
        <DatePicker
            android:id="@+id/homeworkDueDateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:layout_gravity="bottom|left" />

        <TimePicker
            android:id="@+id/homeworkDueDateTimeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:layout_gravity="bottom|right" />
        -->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="left"
            android:hint="Due Date"
            android:id="@+id/dueDateEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:layout_gravity="right"
            android:hint="Due Time"
            android:id="@+id/dueTimeEditText" />

    </LinearLayout>

</LinearLayout>
